; ModuleID = '/home/carl/AnghaBench/lab/engine/code/botlib/extr_be_aas_reach.c_AAS_FallDamageDistance.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/botlib/extr_be_aas_reach.c_AAS_FallDamageDistance.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { float }

@aassettings = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AAS_FallDamageDistance() #0 {
  %1 = alloca float, align 4
  %2 = alloca float, align 4
  %3 = alloca float, align 4
  %4 = call float @sqrt(i32 300000)
  store float %4, float* %1, align 4
  %5 = load float, float* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @aassettings, i32 0, i32 0), align 4
  store float %5, float* %2, align 4
  %6 = load float, float* %1, align 4
  %7 = load float, float* %2, align 4
  %8 = fdiv float %6, %7
  store float %8, float* %3, align 4
  %9 = load float, float* %2, align 4
  %10 = fpext float %9 to double
  %11 = fmul double 5.000000e-01, %10
  %12 = load float, float* %3, align 4
  %13 = fpext float %12 to double
  %14 = fmul double %11, %13
  %15 = load float, float* %3, align 4
  %16 = fpext float %15 to double
  %17 = fmul double %14, %16
  %18 = fptosi double %17 to i32
  ret i32 %18
}

declare dso_local float @sqrt(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
